# attendance_bot

./: .env.example  .gitignore  README.md  app.py  attendance_taker.py  hello_world.py  pyproject.toml  render_deploy.py  requirements.txt  set_webhook.py  test.py  test_redis.py  vercel.json  webhook.py
api/: app.py  attendance_taker.py  telegram_util.py  util.py
collections/: attendance_repository.py  ban_repository.py  poll_group_repository.py
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
handlers/: attendance_handler.py  general_handler.py  poll_handler.py
model/: attendance_list.py  event_poll.py  person.py
repositories/: __init__.py  poll_repository.py
services/: attendance_service.py  poll_group_service.py  poll_service.py
src/api/: app.py  debounce_worker.py
src/handlers/: __init__.py  attendance_handler.py  ban_handler.py  general_handler.py  poll_handler.py
src/model/: __init__.py  attendance_list.py  event_poll.py  person.py  poll_group.py
src/repositories/: __init__.py  attendance_repository.py  ban_repository.py  poll_group_repository.py  poll_repository.py
src/service/: __init__.py  attendance_service.py  ban_service.py  poll_group_service.py  poll_service.py  telegram_message_updater.py
src/util/: __init__.py  constants.py  date_time.py  debouncer.py  encodings.py  errors.py  telegram.py  texts.py
src/view/: __init__.py  attendance_views.py  ban_views.py  (+1 more)
util/: __init__.py  constants.py  date_time.py  db.py  encodings.py  helper.py  objects.py  status.py  texts.py
views/: attendance_views.py  poll_views.py
(+1 files in other folders)
