[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
# tell pytest to look in tests/ and use src/ as the source path
testpaths = ["test"]
pythonpath = ["src"]

[tool.isort]
src_paths = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "PickleBot"
version = "0.1.0"
description = "Some description"
authors = [{ name = "Ryan" }]
dependencies = [
    "anyio==4.7.0",
    "asgiref==3.7.2",
    "blinker==1.9.0",
    "certifi==2024.12.14",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "colorama==0.4.6",
    "dnspython==2.7.0",
    "exceptiongroup==1.2.2",
    "Flask==2.3.3",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.5",
    "MarkupSafe==3.0.2",
    "mongopersistence==0.3.2",
    "motor==3.6.0",
    "pymongo==4.9.2",
    "python-dotenv==1.0.1",
    "python-telegram-bot==21.10",
    "requests==2.32.3",
    "sniffio==1.3.1",
    "typing_extensions==4.12.2",
    "urllib3==2.3.0",
    "uvicorn==0.23.2",
    "Werkzeug==3.1.3",
    "pytest",
]

